# Spark-Java-Maven-Hello-World

./: .gitignore  BUILD.bazel  README.md  generate_workspace.bzl  pom.xml
HelloSpark/: pom.xml
HelloSpark/src/main/java/edu/ucsb/cs56/w16/sparkjava/: App.java  SparkHello.java
src/main/java/edu/ucsb/cs56/w16/sparkjava/: SparkHello.java
